rio-macros/tests/ui_fail/type_name_ident_arg.rs
use rio_macros::*;

#[derive(TypeName)]
#[type_name]
struct Test {
    pub a: u32,
}

fn main() {}
